--- a/src/components/Nombres.astro
+++ b/src/components/Nombres.astro
@@ -30,7 +30,7 @@
           Padres del novio
         </h2>
         <div class="space-y-1">
-          <p class="font-charm text-lg sm:text-xl text-[#626a54]">Concepción Arce Aldunate (+)</p>
+          <p class="font-charm text-xl sm:text-xl text-[#626a54]">Concepción Arce Aldunate (+)</p>
           <!-- <p class="font-charm text-lg sm:text-xl text-[#626a54]">María Escobar Choque</p> -->
         </div>
       </div>
@@ -41,8 +41,8 @@
           Padres de la novia
         </h2>
         <div class="space-y-1">
-          <p class="font-charm text-lg sm:text-xl text-[#626a54]">Rene Carbajal Villacorta (+)</p>
-          <p class="font-charm text-lg sm:text-xl text-[#626a54]">Balvina Morales Domínguez</p>
+          <p class="font-charm text-xl sm:text-xl text-[#626a54]">Rene Carbajal Villacorta (+)</p>
+          <p class="font-charm text-xl sm:text-xl text-[#626a54]">Balvina Morales Domínguez</p>
         </div>
       </div>
 
@@ -52,8 +52,8 @@
           Padrinos de Civil
         </h2>
         <div class="space-y-1">
-          <p class="font-charm text-lg sm:text-xl text-[#626a54]">Mario Daza Villanueva</p>
-          <p class="font-charm text-lg sm:text-xl text-[#626a54]">María del Carmen Gonzales de Daza</p>
+          <p class="font-charm text-xl sm:text-xl text-[#626a54]">Mario Daza Villanueva</p>
+          <p class="font-charm text-xl sm:text-xl text-[#626a54]">María del Carmen Gonzales de Daza</p>
         </div>
       </div>
 
