--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ import FloresAbajo from '../components/FloresAbajo.astro';
 <!-- <DireccionIglesia/> -->
 <Itinerario/>
 <CodigoVestimenta/>
-<GaleriaFotos/>
+<!-- <GaleriaFotos/> -->
 <Despedida/>
 <FloresAbajo/>
 
