--- a/src/components/Despedida.astro
+++ b/src/components/Despedida.astro
@@ -6,13 +6,13 @@
     <div class="max-w-4xl mx-auto text-center">
 
       <!-- 🌸 FLORES SUPERIORES -->
-      <div class="flex justify-center mb-10" id="flores-arriba-despedida">
+      <!-- <div class="flex justify-center mb-10" id="flores-arriba-despedida">
         <img
           src="/imagenes/Separadores.webp"
           alt="Flores decorativas"
           class="w-40 md:w-48 lg:w-56 h-auto object-contain opacity-90"
         />
-      </div>
+      </div> -->
 
       <!-- CARD PRINCIPAL -->
       <div 
@@ -90,7 +90,7 @@
             </p>
             <div class="flex justify-center mb-10" id="boton-confirmar">
               <a
-                href="https://wa.me/59178762918?text=Me%20complace%20confirmar%20mi%20asistencia%20para%20la%20boda.%20Nos%20vemos%20pronto"
+                href="https://wa.link/7dkkcv"
                 target="_blank"
                 rel="noopener noreferrer"
               >
