--- a/src/components/Direccion.astro
+++ b/src/components/Direccion.astro
@@ -50,26 +50,16 @@
       <p
         class="font-charm text-xl md:text-lg text-[#626a54] leading-relaxed mb-2"
       >
-        <b class="text-[#C9A961]">Fraternidad Estudiantes de la Plata</b><br />
-        <!-- Calle Junín, entre <br /> Avenida 20 de Octubre y Plaza España, -->
+        <b class="text-[#626a54]">Fraternidad Estudiantes de la Plata</b><br />
+        <p class="font-charm text-xl text-[#626a54] font-bold">18:30 Hrs.</p>
+        <!-- <br /> Avenida 20 de Octubre y Plaza España, -->
       </p>
     </div>
     
     <!-- BOTÓN VER UBICACIÓN -->
     <div class="flex justify-center" id="boton-ubicacion">
     <a
-        href="Jorge y Zaraith
-Padres Novio: Concepción Arce Aldunate (+)
-Padres de la novia: Rene Carbajal Villacorta (+)
-Balvina Morales Domínguez 
-
-Padrinos de Civil: Mario Daza Villanueva y María del Carmen Gonzales de Daza
-
-20 de Diciembre de 2025
-18:00 hrs
-
-Fraternidad Estudiantes de la Plata
-https://maps.app.goo.gl/GdKpYgoZhLENABoHA"
+        href="https://maps.app.goo.gl/jPmp6ywExRKwkvydA"
         target="_blank"
         rel="noopener noreferrer"
     >
