--- a/src/components/Itinerario.astro
+++ b/src/components/Itinerario.astro
@@ -78,8 +78,8 @@
             </div>
             <!-- TEXTO DERECHA -->
             <div class="flex flex-col items-center justify-center px-3 md:px-6 text-center texto-der">
-              <p class="font-charm text-xl md:text-base lg:text-lg text-[#C9A961] font-bold leading-tight">Ceremonia Religiosa</p>
-              <p class="font-charm text-xl md:text-sm text-[#626a54] mt-1">16:00 Hrs</p>
+              <p class="font-charm text-xl md:text-base lg:text-lg text-[#C9A961] font-bold leading-tight">Recepción</p>
+              <p class="font-charm text-xl md:text-sm text-[#626a54] mt-1">18:00 Hrs</p>
             </div>
           </div>
 
@@ -96,8 +96,8 @@
           <div class="evento-item grid grid-cols-2 gap-6 md:gap-10 py-2">
             <!-- TEXTO IZQUIERDA -->
             <div class="flex flex-col items-center justify-center px-3 md:px-6 text-center texto-izq">
-              <p class="font-charm text-xl md:text-base lg:text-lg text-[#C9A961] font-bold leading-tight">Boda Civil y Recepción</p>
-              <p class="font-charm text-xl md:text-sm text-[#626a54] mt-1">19:00 Hrs</p>
+              <p class="font-charm text-xl md:text-base lg:text-lg text-[#C9A961] font-bold leading-tight">Boda Civil</p>
+              <p class="font-charm text-xl md:text-sm text-[#626a54] mt-1">18:30 Hrs</p>
             </div>
             <!-- IMAGEN DERECHA -->
             <div class="flex flex-col items-center justify-center px-3 md:px-6 imagen-der">
