--- a/src/components/Direccion.astro
+++ b/src/components/Direccion.astro
@@ -51,6 +51,7 @@
         class="font-charm text-xl md:text-lg text-[#626a54] leading-relaxed mb-2"
       >
         <b class="text-[#626a54]">Fraternidad Estudiantes de la Plata</b><br />
+        <b class="text-[#626a54]">Santa Cruz - Bolivia</b>
         <p class="font-charm text-xl text-[#626a54] font-bold">18:00 Hrs.</p>
         <!-- <br /> Avenida 20 de Octubre y Plaza España, -->
       </p>
